Fixed a scrollbar issue

--- a/template/public/_general.scss
+++ b/template/public/_general.scss
@@ -9,8 +9,8 @@ body {
 
 html,
 body {
-  width     : 100vw;
-  max-width : 100vw;
+  width     : 100%;
+  max-width : 100%;
   min-height: 100vh;
   margin    : 0;
   padding   : 0;
